@@ -1,3 +1,8 @@
+2018-09-23  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/87395
+	* gfortran.dg/intent_out_11.f90: New test.
+
 2018-09-23  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	* gfortran.dg/coarray_lib_alloc_4.f90: Fix scan patterns.
