@@ -1,3 +1,9 @@
+2018-09-23  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/87397
+	* gfc_conv_procedure_call: Do not add clobber on INTENT(OUT)
+	for variables having the dimension attribute.
+
 2018-09-23  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	* trans-expr.c (gfc_caf_get_image_index): Do array index
